add json stream input, tweaks
